# DeShuffle-ZK-solana-PoC

./: .gitignore  Anchor.toml  Readme.md  package-lock.json  package.json  verifyData.json
circuits/circuits/: sfmt.circom  shuffle.circom
docs/: deshuffle.drawio  zkholdem.drawio
helpers/: ptau.sh  verification_key.json  verifying_key.rs  zkey.sh
js-sdk/: utilities.ts
programs/le-poker-vdf-solana/: Cargo.toml
programs/le-poker-vdf-solana/src/: lib.rs
programs/le-poker-vdf-solana/src/game/: game.rs
programs/le-poker-vdf-solana/src/vdf/: mod.rs  wes18.rs
programs/le-poker-vdf-solana/src/zkp/: mod.rs  verifier.rs  verifying_key.rs
programs/zk-solana-rust/: Cargo.toml
programs/zk-solana-rust/src/: errors.rs  lib.rs  verify_test.rs  verifying_key.rs
programs/zk-solana-rust/src/instructions/: mod.rs  verify.rs
src/: proof.js  test.ts  utils.ts
tests/: le-poker-vdf-solana.ts  zk-solana-rust.ts
