[package]
name = "le-poker-vdf-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "le_poker_vdf_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
num-bigint = { version = "0.4" }
ahash = "=0.8.6"
groth16-solana = "0.0.2"

# Light Deps
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"